# tg_weather_bot

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  bot.tpl  docker_compose.yml.tpl  main.py  main.tf  pre-commit-config.yaml  pyproject.toml  requirements.txt
.ci/: .pre-commit-config.yaml  .pylintrc  yamllint
.github/workflows/: build_dev.yaml  build_dev_nomad.yaml  build_prod.yaml  build_prod_compose.yaml  build_prod_nomad.yaml  check_nomad.yaml  deploy_compose.yaml  destroy_compose.yaml  linter.yaml  main_backup.yaml  pre-commit-config.yaml
code/: main.py  requirements.txt
docker/: Dockerfile  docker_compose.yml.tpl  entrypoint.sh
gitactions_archive/: build_dev_nomad.yaml  build_prod_nomad.yaml  check_nomad.yaml
skills/devops-python-engineer/: SKILL.md
skills/devops-python-engineer/agents/: openai.yaml
skills/devops-python-engineer/references/: deployment-checklist.md  python-service-checklist.md
