[project]
name = "bot-cicd"
version = "0.1.0"
description = "cicd"
authors = [{ name = "Roman", email = "mmm.romka@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pylint==2.9.3",
    "commitizen>=3.30.1,<4",
    "astroid==2.6.2",
    "pytelegrambotapi==4.7.1",
    "pytz==2022.1",
    "psycopg2==2.9.5",
    "apscheduler==3.10.0",
    "prek>=0.3.8",
    "ruff>=0.15.10",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["bot_cicd"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
